# Jal-Sanchalak

./: Dockerfile  README.md  inference.py  key  key.pub  openenv.yaml  pyproject.toml  requirements.txt  setup.bat
server/: __init__.py  app.py  dam_physics.py  environment.py  models.py  tasks.py
tests/: test_environment.py
