[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "Jal-Sanchalak-dam-flood-control"
version = "0.1.0"
description = "Dam Flood Control OpenEnv - RL environment for dam automation"
requires-python = ">=3.10"

[tool.openenv]
environment = "server.environment:DamFloodControlEnvironment"