[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dam-flood-control"
version = "0.1.0"
description = "Dam Flood Control OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
environment = "server.environment:DamFloodControlEnvironment"